comments on expt 3

--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -306,13 +306,15 @@ The probabilistic pragmatics model does a good job of accounting for the variabi
 The model designed to describe generic language (e.g. \emph{Swans are white.}) can describe habitual language (e.g. \emph{John smokes.}) equally as well by specifying the underlying degree as the frequency with which an individuals performs an action.
 This provides a formal bridge between generalizations of properties about categories (i.e. \emph{generics}) and generalizations about individuals or events (i.e. \emph{habituals}), a connection often noted in the linguistics literature \cite{Carlson1977, Carlson2005, Cohen1999}. 
 
-\section{Experiment 3: Time and subjective frequency}
+\section{Experiment 3: Frequency versus expectation}
 
 People change in a way that natural kinds cannot: People can modify their behavior overnight.
 Yet, there is an ambiguity in the frequency degree semantics over which the pragmatic theory operates.
 In some sense, one can only know \emph{past frequency} of action because that is all that has occurred.
 On the other hand, language has a communicative function, and only \emph{predictive frequency} will be helpful in the future.
 In Expt.~3, we explore how knowledge of certain causal factors (e.g. the decision to retire; the development of an allergy) interacts with the past frequency of action to modulate the felicity of habitual sentences (e.g. \emph{John writes novels.}; \emph{John eats peanut butter.}).
+\ndg{pose the question of this expriment more clearly: is propensity about past frequency or future expectations? then say briefly how we address it.}
+
 
 \subsection{Method}
 \begin{figure*}[t]
@@ -351,6 +353,7 @@ There is a clear and consistent negative effect of preventative information on t
 When collapsing across items and subjecting the data to a mixed-effects model with random by-participant effects of intercept and random by-item effects of intercept and conditions, we find evidence for a small effect of \emph{enabling} conditions on endorsements (M =  0.89 [0.88, 0.91]) as compared to baseline (M = 0.85 [0.83, 0.87]) --- $\beta = 0.42; SE = 0.15; z = 2.8; p = 0.005$, in addition to a large effect of \emph{preventative} conditions on endorsements (M = 0.29 [0.26, 0.31]) --- $\beta = -3.22; SE = 0.21; z = -15.2; p < 0.001$. 
 Finally, we observe endorsements in this experiment that are appreciably higher than in Expt.~2 for the same items (compare green bars to red bars).
 This may be due, in part, to an effect of the experiment context on participants: Participants are viewing extra information that strongly disables the action from occurring; when that information is not present, participants may be more inclined to endorse the habitual.
+\ndg{we should think about where in the model this calibbration effect would be seen. Overall it would be nice to tie this expt more to the model, even if in a relatively shallow way.}
 
 %     condition      mean  ci_lower  ci_upper
 %        (fctr)     (dbl)     (dbl)     (dbl)
@@ -388,6 +391,7 @@ This may be due, in part, to an effect of the experiment context on participants
 
 These results suggest that the felicity of habituals is based on an underlying scale of \emph{predictive} frequency of action.
 Habitual language is useful when it corresponds to future predictions of people's actions.
+\ndg{we want to make really clear that this is important both because of the communicative function it suggests (information useful in the future) and because it suggests that the underlying scale is a subjective one that integrates observed frequency with top-down biases from an intuitive theory... some of that may go in discussion.}
 
 %\subsection{Model results}
 
