--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -88,9 +88,9 @@ events; generics; pragmatics; Bayesian data analysis; Bayesian cognitive model
 %\ndg{need to revise this intro with some strong perspective taking: your target audience is smart cogsci people who don't know that much about these topics (think josh t).}
 
 If you learn that Bill smoked three cigarettes last month, would you say that \emph{Bill smokes}?
-Generalizing an event (such as Bill smoking) over time is useful for future predictions about the occurrence of the event.
+Generalizing an event (such as Bill smoking) over time is useful for future predictions about the occurrence of that event.
 But what evidence do you need to make and communicate such a generalization? 
-Three cigarettes in a month may not be enough to say that \emph{Bill smokes}, but Bill might feel entitled to say he volunteers, after helping out at a soup kitchen three times last month.
+Three cigarettes in a month may not be enough to say that \emph{Bill smokes}, but Bill might feel entitled to say he volunteers, after helping out at a soup kitchen the same number of times in the same time period.
 
 Habitual sentences (e.g. \emph{Bill smokes.}; \emph{It rains around here.}) are the linguistic means by which generalizations about events are conveyed.
 Habituals about people are particularly interesting because they are likely central to intuitive theories of personality and behavior. 
