--- a/writing/_cogsci2016/habituals-cogsci2016.bib
+++ b/writing/_cogsci2016/habituals-cogsci2016.bib
@@ -175,6 +175,40 @@ year = {2008}
   address   = {Cambridge}
 }
 
+@article{McGuire1976,
+  author = {McGuire, William J. and Padawer-Singer, Alice},
+  doi = {10.1037/0022-3514.33.6.743},
+  file = {:Users/mht/Documents/Mendeley Desktop/McGuire, Padawer-Singer/1976/McGuire, Padawer-Singer - 1976 - Trait salience in the spontaneous self-concept.pdf:pdf},
+  isbn = {0022-3514},
+  issn = {0022-3514},
+  journal = {Journal of personality and social psychology},
+  mendeley-groups = {habituals},
+  number = {6},
+  pages = {743--754},
+  pmid = {1271234},
+  title = {{Trait salience in the spontaneous self-concept.}},
+  volume = {33},
+  year = {1976}
+}
+@article{McGuire1986,
+author = {McGuire, William J. and McGuire, Claire V.},
+doi = {10.1037/0022-3514.51.6.1135},
+file = {:Users/mht/Documents/Mendeley Desktop/McGuire, McGuire/1986/McGuire, McGuire - 1986 - Differences in conceptualizing self versus conceptualizing other people as manifested in contrasting verb type.pdf:pdf},
+isbn = {0022-3514},
+issn = {0022-3514},
+journal = {Journal of personality and social psychology},
+keywords = {Adolescent,Affect,Age Factors,Child,Cognition,Female,Humans,Linguistics,Male,Self Concept,Self Disclosure,Sex Factors,Social Perception,Speech,Thinking},
+mendeley-groups = {habituals},
+number = {6},
+pages = {1135--43},
+pmid = {3806353},
+title = {{Differences in conceptualizing self versus conceptualizing other people as manifested in contrasting verb types used in natural speech.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/3806353},
+volume = {51},
+year = {1986}
+}
+
+
 
 @article{Repacholi1997,
   abstract = {Although there is substantial evidence that 30-month-old children can reason about other people's desires, little is known about the developmental antecedents of this ability. A food-request procedure was devised to explore this understanding in 14- and 18-month-olds. Children observed an experimenter expressing disgust as she tasted 1 type of food and happiness as she lasted another type of food. They were then required to predict which food the experimenter would subsequently desire. The 14-month-olds responded egocentrically, offering whichever food they themselves preferred. However, 18-month-olds correctly inferred that the experimenter wanted the food associated with her prior positive affect. They were able to make this inference even when the experimenter's desires differed from their own. These data constitute the first empirical evidence that 18-month-olds are able to engage in some form of desire reasoning. Children not only inferred that another person held a desire, but also recognized how desires are related to emotions and understood something about the subjectivity of these desires.},
