--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -87,9 +87,13 @@ events; generics; pragmatics; Bayesian data analysis; Bayesian cognitive model
 
 %\ndg{need to revise this intro with some strong perspective taking: your target audience is smart cogsci people who don't know that much about these topics (think josh t).}
 
-If you learn that Bill smoked three cigarettes last month, would you say that \emph{Bill smokes}?
-Generalizing an event (such as Bill smoking) over time is useful for future predictions about the occurrence of that event.
-But what evidence do you need to make and communicate such a generalization? 
+Predicting events is critical for survival and development, and generalizing a prediction over time is a useful synthesis for future prediction and abstraction.
+%Predicting physical events is important for discovering how the world works.
+%Predicting the behaviors of others is  is necessary to figure out what others will do. Must be able to predict caretaker?s behavior.
+Language allows us to communicate hard-won generalizations to each other, but under what evidence would you make and communicate such generalizations?
+If Bill smoked three cigarettes last month, would you say that \emph{Bill smokes}?
+%Generalizing an event (such as Bill smoking) over time is useful for future predictions about the occurrence of that event.
+%But what evidence do you need to make and communicate such a generalization? 
 Three cigarettes in a month may not be enough to say that \emph{Bill smokes}, but Bill might feel entitled to say he volunteers, after helping out at a soup kitchen the same number of times in the same time period.
 
 Habitual sentences (e.g. \emph{Bill smokes.}; \emph{It rains around here.}) are the linguistic means by which generalizations about events are conveyed.
