--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -129,42 +129,52 @@ In Expt.~3, we further explore the nature of the underlying degree scale of ``su
 \section{Computational model}
 \ndg{since generics isn't out, it is better to talk about this as: we introduce a model building on lassiter\&goodman, which is almost the same as one we have evaluated for generics.}
 
-Habituals express a relation between an individual (e.g. \textsc{Bill}) and an event (e.g. \textsc{to smoke}), in an analogous way to how generics express a relation between a kind (e.g. \textsc{robins}) and a property (e.g. \textsc{lays eggs}) \cite{Carlson1995}. 
-\citeA{TesslerUnderReview} introduced a computational model that explains the hitherto puzzling phenomena surrounding generic language (e.g. why \emph{Robins lay eggs} is felicitous while \emph{Robins are female} is not), with a simple semantics based on the property prevalence (e.g. the proportion of robins that lay eggs or are female), coupled with basic communicative pressures to be truthful and informative. 
-We apply this same model to habituals, adopting as the underlying scale the frequency of the event.
- 
-For a given individual $I$ (e.g.~\textsc{Bill}) and an event or behavior $B$ (e.g.~\textsc{smoking}), we refer to the probability that individual $I$ will partake in beahvior $B$, that is $P(B\mid I)$, as the \emph{subjective frequency} of $B$ for $I$.
-\ndg{are you sure we want to call this subjective frequency? i think this is going to garden path people, since expt 3 is specifically making the point that it isn't frequency. how about propensity, which we define as subjective probability that I will do B in the next time window?}
+A habitual sentence about an individual expresses a generalization about an event\footnote{
+We articulate the formalization in terms of individuals and events or actions, but the theory applies more generally to events without actors (e.g \emph{It rains around here.}).
+}.
+For a given individual $I$ (e.g.~\textsc{Bill}) and an event or behavior $B$ (e.g.~\textsc{smoking}), we refer to the probability that individual $I$ will perform behavior $B$ in the next time window, that is $ P(B\mid I) = \int_{t} ** dt$, as the \emph{propensity} of $I$ doing $B$.
+%
+The natural semantics would then a simple threshold on frequency $P(B\mid I)>\tau$ \cite<c.f.>{Cohen1999}, yet there is no fixed value for $\tau$ would explain the flexibility of truth conditions (e.g. \emph{Bill smokes} vs. \emph{Bill volunteers.}).
+Building on \citeA{Lassiter2013}, we posit that this threshold is not a fixed property of the language, but is established by pragmatic inference.
+
+We introduce a model of a pragmatic speaker $S_2$ who reasons about a pragmatic listener $L_1$ concerned with learning the propensity of a certain behavior for a certain individual, $x=P(B \mid I)$.
+The listener $L_1$ has uncertainty about the threshold for the habitual (i.e. doesn't know precisely what it means), and reasons about what an informative speaker $S_1$ would be likely to convey, given the speaker $S_1$ is reasoning about an idealized literal listener $L_0$, who has access to the threshold $\tau$ (i.e. $S_1$ believes $L_0$ will interpret him in exactly the way he means). 
+  and decides whether to produce the habitual or stay silent (i.e. produce a \emph{null} utterance that has no informative content).
+%
+%\ndg{are you sure we want to call this subjective frequency? i think this is going to garden path people, since expt 3 is specifically making the point that it isn't frequency. how about propensity, which we define as subjective probability that I will do B in the next time window?}
 %It is not clear at this point whether this frequency is a retrospective (how often has Bill smoked in the past) or a prospective frequency (how often to I expect Bill to smoke in the future); for the time being, we assume time is \emph{homogenous} with respect to past and present (i.e. however often Bill has smoked in the past will be how often he smokes in the future). 
-The semantics of a habitual sentence is a simple threshold on frequency $P(B\mid I)>\tau$ \cite<c.f.>{Cohen1999}.
-This threshold is not a fixed property of the language, however, but is established by pragmatic inference.
 %This inference depends on event and person knowledge, but otherwise follows from a general mechanism of language.
-We imagine a hypothetical, pragmatic listener ($L_1$) concerned with learning the frequency of a certain behavior for a certain individual I, $x=P(B \mid I)$, who reasons about an informative speaker ($S_1$), who in turn reasons about a literal listener ($L_0$):
+%We imagine a hypothetical, pragmatic listener ($L_1$) concerned with learning
 \begin{eqnarray}
+P_{S_{2}}(u \mid x) & \propto &  \int_{\theta} P_{L_{1}}(x , \tau \mid u) \label{eq:S2}\\
 P_{L_{1}}(x , \tau \mid u) &\propto& P_{S_{1}}(u \mid x, \tau) \cdot P(x) \cdot P(\tau) \label{eq:L1}\\
 P_{S_{1}}(u \mid x, \tau) &\propto&  {P_{L_{0}}(x \mid u, \tau)}^{\lambda} \label{eq:S1}\\
 P_{L_{0}}(x \mid u, \tau) &\propto& {\delta_{\denote{u}(x, \tau)} P(x)}. \label{eq:L0}
 \end{eqnarray}
-
-\ndg{since we don't use $L_1$ directly here, i'd stick $S_2$ onto the top of the above eqnarray and just start there...}
-The pragmatic listener $L_1$ (Eq.~\ref{eq:L1}) is a model of interpreting habituals: Upon hearing a habitual, what frequency is a listener likely to infer?
-We can now imagine a speaker $S_2$ who reasons about this type of listener: 
-%
-\begin{equation} 
-P_{S_{2}}(u \mid x) \propto  \int_{\theta} P_{L_{1}}(x , \tau \mid u)
-\label{eq:S2}
-\end{equation}
-%
-If we take the two utterances considered by speaker $S_2$ to be the habitual or nothing (staying silent), then Equation \ref{eq:S2} can be interpreted as a model of felicity or truth judgments \cite{Degen2014, TesslerUnderReview}.
-The speaker considers the thought-processes of listener $L_1$ (Eq.~\ref{eq:L1}) and decides if the habitual is a good way to describe the frequency $x$. 
-$S_2$'s decision is with respect to the alternative of saying nothing. 
-He will choose to produce the habitual when the true frequency $x$ is more likely under $L_1$'s posterior given the habitual than under her prior. 
+If we take the pragmatic speaker $S_2$ to consider two utterances: the habitual or nothing (staying silent), then Equation \ref{eq:S2} can be interpreted as a model of felicity or truth judgments \cite{Degen2014, TesslerUnderReview}.
+The speaker will choose to produce the habitual when the true propensity $x$ is more likely under $L_1$'s posterior given the habitual than under her prior. 
 Critically, speaker $S_{2}$ doesn't have a particular meaning of the habitual in mind (i.e. doesn't have access to the threshold $\tau$), but knows that $L_{1}$ will consider it, and integrates over the likely values she'll consider.
+
+This model is nearly identical with the model we have proposed for generic language \cite{TesslerUnderReview}, with the only difference being the underlying degree scale----\emph{propensity} of a behavior vs. \emph{prevalence} of a property. 
+
+%\ndg{since we don't use $L_1$ directly here, i'd stick $S_2$ onto the top of the above eqnarray and just start there...}
+%The pragmatic listener $L_1$ (Eq.~\ref{eq:L1}) is a model of interpreting habituals: Upon hearing a habitual, what frequency is a listener likely to infer?
+%
+%
+%The speaker considers the thought-processes of listener $L_1$ (Eq.~\ref{eq:L1}) and decides if the habitual is a good way to describe the frequency $x$. 
+%$S_2$'s decision is with respect to the alternative of saying nothing. 
+
 
 %Herein lies an interesting deviation from generic language about natural kinds: Natural kinds change over the course of biological time. 
 %People, on the other hand, develop from babies to children to adults and elderly adults; People make resolutions to explicitly change their behavior and people discover things about themselves that cause them to change behavior. 
 %These higher-order beliefs about the stationarity of time with respect to events will no doubt influence speakers judgments of habituals. 
 %We will explore these higher-order beliefs later when we relax the \emph{homogeneity assumption}. 
+
+%
+%Habituals express a relation between an , in an analogous way to how generics express a relation between a kind (e.g. \textsc{robins}) and a property (e.g. \textsc{lays eggs}) \cite{Carlson1995}. 
+%\citeA{TesslerUnderReview} introduced a computational model that explains the hitherto puzzling phenomena surrounding generic language (e.g. why \emph{Robins lay eggs} is felicitous while \emph{Robins are female} is not), with a simple semantics based on the property prevalence (e.g. the proportion of robins that lay eggs or are female), coupled with basic communicative pressures to be truthful and informative. 
+%We apply this same model to habituals, adopting as the underlying scale the frequency of the event.
+% 
 
 \begin{figure*}[t]
 \centering
@@ -180,9 +190,9 @@ Critically, speaker $S_{2}$ doesn't have a particular meaning of the habitual in
 %Experiment 1 set out to empirically verify the long-held belief that habitual sentences are analogous to generic sentences about events. 
 %We used an adapted version of the computational model presented by \citeA{TesslerUnderReview} to guide the experimental design.
 %
-$P(x)$ in Eqs.~\ref{eq:L1} and \ref{eq:L0} specifies prior beliefs about the frequency of a specific event or behavior $x$  (e.g. \emph{smoking}).
+$P(x)$ in Eqs.~\ref{eq:L1} and \ref{eq:L0} specifies prior beliefs about the propensity of a specific event or behavior $x$  (e.g. \emph{smoking}).
 \ndg{note: P(x) is actually a probability over probability densities, right? this might be worth specifying more clearly in the model section...}
-Given that some individuals rarely or never engage in a behavior, while others do quite frequently, we would expect the prior to be a mixture distribution between these two possibilities, similar in spirit to Hurdle Models of epidemiological data \cite{hurdleModels}.
+Given that some individuals rarely or never engage in a behavior, while others do quite frequently, we would expect the prior to be a mixture distribution between these two possibilities, similar in spirit to Zero-inflated or Hurdle Models of epidemiological data \cite{hurdleModels}.
 Indeed, there may be more than these two possibilities, corresponding to different kinds of participants, for instance different expected frequencies depending on gender or age. 
 In this experiment we elicit the prior $P(x)$ for different events, and explore there hypotheses about the structure of these priors.
 
@@ -420,10 +430,14 @@ Habitual language is useful when it corresponds to future predictions of people'
 
 \section{Discussion}
 
-To our knowledge, this is the first empirical evidence addressing the analogy between habitual sentences and generic sentences.
-We are able to do this using a formal theory of the semantics and pragmatics of generic language.
+To our knowledge, this is the first empirical evidence addressing the truth conditions of habitual sentences.
+We are able to do this using a formal theory of the semantics and pragmatics of habitual language, which is almost identical to the our previous work on generic language.
 We adopt as the underlying degree scale the \emph{subjective frequency} with which a person does an action. 
 In Expt.~3, we showed that the notion of subjective frequency is tied to the future, \emph{predictive} frequency, which depends upon both past frequency and other conceptual factors.
+
+Habituals are used to convey generalizations about events.
+They convey \emph{\textsc{X} happens}.
+Knowing that an event generally happens may be a useful abstraction for causal inference \cite<e.g.>{Griffiths2005}. 
 
 \mht{kind of rough and needs more flowers}
 In the psychological literature, habituals have received relatively little attention as compared with \emph{generics}. 
