methods for expt2

--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -212,11 +212,11 @@ Items were chosen to intuitively cover a range of likely frequencies of action, 
 
 For each event, participants were asked two questions, with associated dependent measures:
 \begin{enumerate}
-\item How many \{men, women\} have \textsc{done action} before?
+\item How many \{men, women\} have \textsc{done action} (e.g. smoked cigarettes) before?
 \subitem Response format: N out of every J
 \subitem N = free response
 \subitem J = 1000 - 10 million (default: 1000)
-\item For a typical \{man, woman\} who has \textsc{done action} before, how frequently does he or she \textsc{do action}?
+\item For a typical \{man, woman\} who has \textsc{done action}  (e.g. smoked cigarettes) before, how frequently does he or she \textsc{do action} (e.g. smoke cigarettes)?
 \subitem Response format: M times in K
 \subitem M = free response
 \subitem K = \{week, month, year, 5 years\} (default: year)
@@ -285,16 +285,18 @@ The experiment took 4 minutes on average on participants were compensated \$0.55
 
 \subsubsection{Procedure and materials}
 
-On each trial, participants were presented with a \emph{past frequency statement} for a given event or behavior of the form: ``In the past $M$ \{weeks, months, years\}, \textsc{person} \textsc{event} 3 times''.
+On each trial, participants were presented with a \emph{past frequency statement} for a given event or behavior of the form: ``In the past M \{weeks, months, years\}, \textsc{person} \textsc{event} 3 times''.
+For example, \emph{In the past month, Bill smoked cigarettes 3 times}.
 We kept constant the number of times the action was done (3) in order to isolate the effects of the time window. 
-The particular intervals used (number $M$ and window \{weeks, months, years\}) were selected by examining the predictions of the speaker model (Eq.~\ref{eq:S2}) for each item independently, and aimed to yield a variety of predicted endorsement rates.
+The particular intervals used (number M and window \{weeks, months, years\}) were selected by examining the predictions of the speaker model (Eq.~\ref{eq:S2}) for each item independently, and aimed to yield a variety of predicted endorsement rates.
 The items were the same as in Expt. ~1.
 
 \ndg{it would be good to give and example sentence for each of the schematic materials here and in other methods sections. ie. "In the past 2 weeks, Bob got wasted 3 times." do you agree "Bob gets wasted."?
 also, specifcy the grammar more precisely (got / gets)..}
 
-Participants were asked whether they agreed or disagreed with the corresponding habitual sentence: ``\textsc{person event}''.
-We selected 6 items for which the priors for men and women varied substantially in Expt.~1 to explore whether or not the prior distribution in Eq.~\ref{eq:L1}, \ref{eq:L0} should be with respect to all people or to males and females separately (e.g. if there is a frequency at which a male would be judged to (habitually) \textsc{wear a bra} but a woman would not be judged to). 
+Participants were asked whether they agreed or disagreed with the corresponding habitual sentence: ``\textsc{person event}'' (e.g. \emph{Bill smokes cigarettes}).
+Participants saw 25 out of the 31 items paired randomly with a male or female character name; the other 6 trials were presented with both male and female names (on separate trials; 37 trials total).  
+These 6 items were chosen because the priors for men and women varied substantially in Expt.~1 to explore whether or not the prior distribution in Eq.~\ref{eq:L1}, \ref{eq:L0} should be with respect to all people or to males and females separately (e.g. if there is a frequency at which a male would be judged to (habitually) \textsc{wear a bra} but a woman would not be judged to). 
 \ndg{unclear what we did with these six items. the way it's phrased makes it sound like we only collected data for these 6...}
 The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/truth-judgments/tj-2.html}.
 
