--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -230,8 +230,8 @@ The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habit
 
 \begin{figure*}[t]
 \centering
-  \includegraphics[width=\textwidth]{tj-scatters1}
-  \caption{}
+  \includegraphics[width=\textwidth]{tj-scatter-2}
+  \caption{\mht{Need to run chains for longer}}
   \label{fig:tjScatters}
 \end{figure*}
 
@@ -313,13 +313,17 @@ The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habit
 
 On each trial of the experiment, the participant was told a person did a particular action 3 times during some time window. 
 Figure \ref{fig:tjScatters} (left) shows the correspondence between the time window given and the felicity of the corresponding habitual sentence. 
-It is clear that a habitual sentence can receive strong agreement even when the actions are very infrequent (log time interval $>$ 4; time interval of subsequent actions years or more; e.g. writing 3 novels, stealing 3 cars in a 5 year interval).
-We also see habitual sentences that participants are reluctant to endorse completely (e.g. wears socks, drinks coffee), even when they are relatively frequent in occurrence (spec. 3 times in a one month interval).
-In our data, actions that are completed multiple times in a very short interval (spec, 3 times in a one week interval) receive at least 75\% endorsement, though there is still variability among them (e.g. smoking cigarettes, wearing socks are endorsed the least), suggesting that even actions that are completed almost everyday can be not good enough to generalize.
-Overall, the time interval predicts only a fraction of the variability in responses ($r^2(93) = 0.33$).
-For actions that are done on the time scale of years or more (upper median of time interval), time interval itself no longer explains the endorsements  ($r^2(50) = 0.07$)
+It is clear that a habitual sentence can receive strong agreement even when the actions are very infrequent (log frequency $<$ 2; time interval of years or longer; e.g. writing 3 novels, stealing 3 cars in a 5 year interval).
+We also see habitual sentences that participants are reluctant to endorse completely (e.g. wears socks, drinks coffee), even when they are relatively frequent in occurrence (spec.,. 3 times in a one month interval; log frequency $\sim$ 5).
+In our data, actions that completed with a high frequency rate (spec., 3 times in a one week interval; log frequency $\sim$ 6.5) receive at least 75\% endorsement, though there is still variability among them (e.g. smoking cigarettes, wearing socks are endorsed the least), suggesting that even actions that are completed almost everyday can insufficient to generalize.
+Overall, frequency of action predicts only a fraction of the variability in responses ($r^2(93) = 0.33$).
+For actions that are done on the time scale of years or longer (lower median of frequency), frequency itself no longer explains the endorsements ($r^2(50) = 0.07$)
 
-We notice that none of our items receive less than 25\% endorsement (i.e. only 75\% of participants disagree with the felicity of the utterance).
+We further examined the six items for which we observed gender differences in the prior elicitation task (Expt.~1).
+We observe no difference between endorsements of the habitual of characters with male and female names. 
+Overall, the mean endorsements by gender are heavily correlated $r(93) = 0.91$. \mht{compare with split half correlation?}
+
+We observe that none of our items receive less than 25\% endorsement (i.e. only 75\% of participants disagree with the felicity of the utterance).
 This may be due to the fact that actor has done the action in the past a plurality of times; we would expect to get strong disagreement with the habitual when the person has never done the action, or perhaps done it only once.
 
 \subsection{Model fit and results}
@@ -328,15 +332,14 @@ We used the pragmatic speaker model $S_2$ (Eq.~\ref{eq:S2}) with the posterior p
 We modeled $P(x)$ as a mixture of individuals with the possibility of carrying out the action and those without the possibility of doing it. 
 The posterior predictive of the prior data was constructed by forward-sampling the mixture component $\theta$ (determined by Q1: number of people who had done the action before, see Expt.~1 data analysis).
 If the sampled person was the kind of person to have done the action before, the frequency was sampled a likely frequency of action (determined by Q2). 
-If they were not the type of person to have done the action, we assume they will never or only rarely do it
-\footnote{These assumptions, while probably valid if a learner knows nothing else about the person, will be challenged in Expt.~3}.
-
+If they were not the type of person to have done the action, we assume they will never or only rarely do it.
+Because we observe no difference between the felicity judgments for habituals of male and female characters, we use a 50\% mixture of the inferred priors for each gender to construct a single frequency across individuals.
 \begin{minipage}{0.5 \textwidth} \small
 \begin{align*}
 \theta & \sim \text{Beta}(\gamma_{1}, \xi_{1}) \\ 
 \ln x & \sim \begin{cases} 
 		\text{Gaussian}(\mu_{2}, \sigma_{2}) &\mbox{if } \text{Bernoulli}(\theta) = \textsc{t} \\
-				\delta_{x=\infty} &\mbox{if } \text{Bernoulli}(\theta) = \textsc{f} \\
+				\delta_{x=-\infty} &\mbox{if } \text{Bernoulli}(\theta) = \textsc{f} \\
 		\end{cases} \\
 \end{align*}
 \end{minipage}
@@ -344,25 +347,26 @@ If they were not the type of person to have done the action, we assume they will
 Having fit the prior empirically, the model was one parameter -- the speaker optimality parameter in Eq.~\ref{eq:S1}. 
 Additionally, we include a data analytic parameter to model random guessing behavior; this provides a rough measure of how much variance is unexplained by the pragmatics model. 
 We use Bayesian data analytic techniques to integrate over these parameters \cite{LW2014}, and compare the posterior predictive distribution of this model to the empirical data in Expt.~2.
+\mht{remove guessing parameter?}
 
 To attain credible values of the model parameters as well as the posterior predictive distribution over responses, we collected 3 MCMC chains of 30,000 iterations, discarding the first 15,000 iterations of each chain for burn in.
 The Maximum A-Posteriori (MAP) value and 95\% highest probability density (HPD) interval for the speaker optimality parameter in Eq.~\ref{eq:S1} is 4.7 [3.7,5.2].
 The MAP and HPD interval for the data-analytic guessing parameter is 0.004 [0.0003, 0.03], suggesting that there is not a substantial amount of the data that is better explained by a model of random guessing than by our pragmatic speaker model.
 
 The probabilistic pragmatics model does a good job of accounting for the variability in responses ($r^2(93) = 0.89$), including actions done on the time scale of years or more  ($r^2(50) = 0.89$) (Figure \ref{fig:tjScatters} right).
+The model decides when the habitual is a useful way to describe the person's behavior, assuming that what the person did in the past is representative. 
+This raises an interesting question: Does the propensity communicated by the habitual indicate a past frequency or a future expectation?
 
-\ndg{save this for discussion. leave out or small bridge to next section...}
-The model designed to describe generic language (e.g. \emph{Swans are white.}) can describe habitual language (e.g. \emph{John smokes.}) equally as well by specifying the underlying degree as the frequency with which an individuals performs an action.
-This provides a formal bridge between generalizations of properties about categories (i.e. \emph{generics}) and generalizations about individuals or events (i.e. \emph{habituals}), a connection often noted in the linguistics literature \cite{Carlson1977, Carlson2005, Cohen1999}. 
 
 \section{Experiment 3: Frequency versus expectation}
 
 People change in a way that natural kinds cannot: People can modify their behavior overnight.
-Yet, there is an ambiguity in the frequency degree semantics over which the pragmatic theory operates.
-In some sense, one can only know \emph{past frequency} of action because that is all that has occurred.
-On the other hand, language has a communicative function, and only \emph{predictive frequency} will be helpful in the future.
-In Expt.~3, we explore how knowledge of certain causal factors (e.g. the decision to retire; the development of an allergy) interacts with the past frequency of action to modulate the felicity of habitual sentences (e.g. \emph{John writes novels.}; \emph{John eats peanut butter.}).
-\ndg{pose the question of this expriment more clearly: is propensity about past frequency or future expectations? then say briefly how we address it.}
+%Yet, there is an ambiguity in the frequency degree semantics over which the pragmatic theory operates.
+%In some sense, one can only know \emph{past frequency} of action because that is all that has occurred.
+%On the other hand, language has a communicative function, and only \emph{predictive frequency} will be helpful in the future.
+Does habitual language indicate a propensity in terms of past frequency or about future expectations?
+In this experiment, we address this by introducing causal factors that enable and prevent future actions (e.g. buying a pack of cigarettes; developing an allergy) and examining felicity judgments of the habitual sentence (e.g. \emph{John smokes cigarettes.}; \emph{John eats peanut butter.}).
+%\ndg{pose the question of this expriment more clearly: is propensity about past frequency or future expectations? then say briefly how we address it.}
 
 
 \subsection{Method}
@@ -397,7 +401,6 @@ The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habit
 
 \subsection{Behavioral results}
 
-Figure \ref{fig:tj3} shows the results of the experiment, together with the analogous data from Expt.~2. 
 There is a clear and consistent negative effect of preventative information on the tendency to endorse the habitual sentence (purple bars).
 When collapsing across items and subjecting the data to a mixed-effects model with random by-participant effects of intercept and random by-item effects of intercept and conditions, we find evidence for a small effect of \emph{enabling} conditions on endorsements (M =  0.89 [0.88, 0.91]) as compared to baseline (M = 0.85 [0.83, 0.87]) --- $\beta = 0.42; SE = 0.15; z = 2.8; p = 0.005$, in addition to a large effect of \emph{preventative} conditions on endorsements (M = 0.29 [0.26, 0.31]) --- $\beta = -3.22; SE = 0.21; z = -15.2; p < 0.001$. 
 Finally, we observe endorsements in this experiment that are appreciably higher than in Expt.~2 for the same items (compare green bars to red bars).
@@ -439,13 +442,29 @@ This may be due, in part, to an effect of the experiment context on participants
 %---
 
 These results suggest that the felicity of habituals is based on an underlying scale of \emph{predictive} frequency of action.
+If that is the case, we would expect judgments of future frequency to be the object of communication. 
+
 Habitual language is useful when it corresponds to future predictions of people's actions.
 \ndg{we want to make really clear that this is important both because of the communicative function it suggests (information useful in the future) and because it suggests that the underlying scale is a subjective one that integrates observed frequency with top-down biases from an intuitive theory... some of that may go in discussion.}
 
-%\subsection{Model results}
+\section{Experiment 4: Predicted frequency}
+\subsubsection{Participants} 
 
+We recruited 120 participants from MTurk, using the same criterion as Expt.~2.
+None of the participants were used in Expt.~3.
+The experiment took 4 minutes on average on participants were compensated \$0.40 for their work.
+
+\subsubsection{Procedure and materials}
+
+The only difference from Expt.~3 is in the dependent measure.
+Participants were asked ``In the next \textsc{time window}, how many times do you think \textsc{person} does \textsc{event}?'', where the \textsc{time window} was the same as given in the \emph{past frequency statement}.
+\subsection{Behavioral results}
+
+\subsection{Model results}
 
 \section{Discussion}
+
+The model decides if the habitual is a useful way to describe the person's behavior, taking into the listener's beliefs about how common the action is, the likely frequency of action, and the basic conversational principles to be truthful and informative.
 
 To our knowledge, this is the first empirical evidence addressing the truth conditions of habitual sentences.
 We are able to do this using a formal theory of the semantics and pragmatics of habitual language, which is almost identical to the our previous work on generic language.
@@ -455,6 +474,12 @@ In Expt.~3, we showed that the notion of subjective frequency is tied to the fut
 Habituals are used to convey generalizations about events.
 They convey \emph{\textsc{X} happens}.
 Knowing that an event generally happens may be a useful abstraction for causal inference \cite<e.g.>{Griffiths2005}. 
+
+\ndg{save this for discussion. leave out or small bridge to next section...}
+The model designed to describe generic language (e.g. \emph{Swans are white.}) can describe habitual language (e.g. \emph{John smokes.}) equally as well by specifying the underlying degree as the frequency with which an individuals performs an action.
+This provides a formal bridge between generalizations of properties about categories (i.e. \emph{generics}) and generalizations about individuals or events (i.e. \emph{habituals}), a connection often noted in the linguistics literature \cite{Carlson1977, Carlson2005, Cohen1999}. 
+
+
 
 \mht{kind of rough and needs more flowers}
 In the psychological literature, habituals have received relatively little attention as compared with \emph{generics}. 
